handler service create product
